// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props.viewHSCodes is true 1`] = `
<div
  className="info layout-row flex-100 layout-wrap layout-align-center"
>
  <div
    className="flex-100"
  >
    <h4>
      Unit 
      2
    </h4>
  </div>
  <hr />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Gross Weight
    </p>
    <p>
      56
       kg
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Length
    </p>
    <p>
      37
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Width
    </p>
    <p>
      111
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Height
    </p>
    <p>
      70
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Volume
    </p>
    <p>
      0.15
       m
      <sup>
        3
      </sup>
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Chargeable Weight
    </p>
    <p>
      60000.00
       kg
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-wrap"
    onClick={[Function]}
  >
    <i
      className="fa fa-eye clip flex-none"
      style={
        Object {
          "background": "-webkit-linear-gradient(left, #333,#fafafa)",
        }
      }
    />
    <p
      className="offset-5 flex-none"
    >
      View Hs Codes
    </p>
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="info layout-row flex-100 layout-wrap layout-align-center"
>
  <div
    className="flex-100"
  >
    <h4>
      Unit 
      2
    </h4>
  </div>
  <hr />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Gross Weight
    </p>
    <p>
      56
       kg
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Length
    </p>
    <p>
      37
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Width
    </p>
    <p>
      111
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Height
    </p>
    <p>
      70
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Volume
    </p>
    <p>
      0.15
       m
      <sup>
        3
      </sup>
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Chargeable Weight
    </p>
    <p>
      60000.00
       kg
    </p>
  </div>
  <hr
    className="flex-100"
  />
</div>
`;

exports[`state.viewer is true 1`] = `
<div
  className="info layout-row flex-100 layout-wrap layout-align-center"
>
  <div
    className="flex-100"
  >
    <h4>
      Unit 
      2
    </h4>
  </div>
  <hr />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Gross Weight
    </p>
    <p>
      56
       kg
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Length
    </p>
    <p>
      37
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Width
    </p>
    <p>
      111
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Height
    </p>
    <p>
      70
       cm
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Volume
    </p>
    <p>
      0.15
       m
      <sup>
        3
      </sup>
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <div
    className="flex-100 layout-row layout-align-space-between"
  >
    <p>
      Chargeable Weight
    </p>
    <p>
      60000.00
       kg
    </p>
  </div>
  <hr
    className="flex-100"
  />
  <HsCodeViewer
    close={[Function]}
    hsCodes={Array []}
    item={
      Object {
        "chargeable_weight": 60,
        "dimension_x": 111,
        "dimension_y": 37,
        "dimension_z": 70,
        "hs_codes": Array [],
        "payload_in_kg": 56,
      }
    }
    theme={
      Object {
        "colors": Object {
          "primary": "#333",
          "secondary": "#fafafa",
        },
      }
    }
  />
</div>
`;
